<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".testing">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="212dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="#009688"
                android:text="       Western Province"
                android:textColor="#351308"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.389"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="3dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="#4251f5"
                android:text="      Places"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="-3dp"
                tools:layout_editor_absoluteY="56dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="241dp"
                android:layout_height="33dp"
                android:text="      Galle Face"
                android:textColor="#071251"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="112dp" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="273dp"
                app:srcCompat="@drawable/gimage" />

            <androidx.core.widget.NestedScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="393dp"
                android:layout_height="217dp"
                android:text="Galle Face is a 5 ha ocean-side urban park, which stretches for 500 m along the coast, in the heart of Colombo,  the financial and business capital of Sri Lanka. The promenade was initially laid out in 1859 by Governor Sir Henry George Ward,  although the original Galle Face Green extended over a much larger area than is seen today. The Galle Face Green was initially used for  horse racing and  as a golf course, but was also used  for cricket, polo, football, tennis and rugby"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="367dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/linktomap"
                android:textColor="#2196F3"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="321dp"
                android:layout_height="33dp"
                android:text="      Gangaramaya Temple"
                android:textColor="#071251"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="112dp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/gangarama" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="216dp"
                android:text="Gangaramaya Temple is one of the most important temples in Colombo, Sri Lanka, being a mix of modern architecture and cultural essence.
Located on the Beira Lake, it was completed in the late 19th century"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="367dp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/linktodirection"
                android:textColor="#2196F3"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="321dp"
                android:layout_height="33dp"
                android:text="      Viharamahadevi Park"
                android:textColor="#071251"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="112dp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="303dp"
                app:srcCompat="@drawable/viharamahadevi" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="292dp"
                android:text="Viharamahadevi Park is a public park located in Cinnamon Gardens, Colombo, situated in front of the
 colonial-era Town Hall in Sri Lanka. It was built by the British colonial administration and is the oldest and
 largest park of Colombo. The park was originally named Victoria Park after Queen Victoria but was renamed after Queen
 Viharamahadevi, the mother of King Dutugamunu on July 18, 1958. During World War II it was occupied by the British Army
 with Australian 17th Brigade based at Victoria Park. After the war the park was restored and open to the public in 1951.
 There used to be a cricket ground in the park, which was used for first-class cricket between 1927 and 1995.
Ceylon played against a touring English team there in 1927 and against an Australian team in 1935.
The park features include a huge Buddha statue which replaced the statue of Queen Victoria which originally stood there,
 and a series of water fountains. It also includes a mini zoo, a children's play area and a BAC Jet Provost.
 There are Muscovy ducks in the park. They swim in the artificial lake and walk on the grass beside it"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="367dp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Viharamahadeviparklink"
                android:textColor="#2196F3"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:background="#604098"
                android:text="      Hotels"
                android:textColor="#071251"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="112dp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="341dp"
                android:layout_height="33dp"
                android:text="      Anantara Kalutara Resort"
                android:textColor="#071251"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="112dp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="242dp"
                app:srcCompat="@drawable/ananthara" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="18dp"
                android:gravity="center"
                android:textColor="@android:color/holo_blue_light"
                android:text="@string/text"
                android:id="@+id/textview"
                />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Avani Kalutara Resort"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                app:srcCompat="@drawable/avanikalutararesort" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="18dp"
                android:gravity="center"
                android:textColor="@android:color/holo_blue_light"
                android:text="@string/avanilinktomap"
                android:id="@+id/textView14"
                />


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>