<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sabaragamuwa_p_places">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="212dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="409dp"
                android:layout_height="52dp"
                android:background="#009688"
                android:text="     Sabaragamuwa Province"
                android:textColor="#351308"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.389"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="3dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="412dp"
                android:layout_height="38dp"
                android:background="#4251f5"
                android:text="      Places"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="-3dp"
                tools:layout_editor_absoluteY="56dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="346dp"
                android:layout_height="33dp"
                android:text="      Pinnawala Elephant Orphanage"
                android:textColor="#071251"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="112dp" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/elephant" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


            <TextView
                android:id="@+id/textView4"
                android:layout_width="373dp"
                android:layout_height="292dp"
                android:text="Pinnawala Elephant Orphanage is an orphanage, nursery and captive breeding ground for wild Asian elephants located at Pinnawala village, 13 km northeast of Kegalle town in Sabaragamuwa Province of Sri Lanka. Pinnawala has the largest herd of captive elephants in the world. In 2011, there were 96 elephants, including 43 males and 68 females from 3 generations,
                living in Pinnawala. The orphanage was founded to care and protect the many orphaned unweaned wild elephants found wandering in and near the forests of Sri Lanka. It was established in 1975 by the Sri Lanka Department of Wildlife Conservation"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="367dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pinnawalalinktomap"
                android:textColor="#2196F3"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="321dp"
                android:layout_height="33dp"
                android:text="      Belilena"
                android:textColor="#071251"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="112dp" />

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/belilenacaveimg" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


            <TextView
                android:id="@+id/textView6"
                android:layout_width="376dp"
                android:layout_height="292dp"
                android:text="Belilena is a well known large cave in Sri Lanka, located 8 km from the town of Kitulgala. Evidence of prehistoric human presence as early as 32,000 years ago was recorded at the site. The skeletal remains of ten individuals were discovered by Paul E. P. Deraniyagala,
                who attributed them to Balangoda Man. Balangoda Man is assumed to have lived as early as 32,000 years ago and occupied high altitude territories of up to 2,000 ft above sea level"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="367dp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/belilenalinktomap"
                android:textColor="#2196F3"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:background="#604098"
                android:text="      Hotels"
                android:textColor="#071251"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="112dp" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Bogala Village Eco Resort"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/bogalavillage" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="18dp"
                android:gravity="center"
                android:textColor="@android:color/holo_blue_light"
                android:text="@string/bogalavillagelinktomap"
                android:id="@+id/textView12"
                />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ahas Gawwa"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView41"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ahasgawwa" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="18dp"
                android:gravity="center"
                android:textColor="@android:color/holo_blue_light"
                android:text="@string/ahasgawwalinktomap"
                android:id="@+id/textView14"
                />


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>