<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uva_p_places">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="212dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="409dp"
                android:layout_height="52dp"
                android:background="#009688"
                android:text="             Uva Province"
                android:textColor="#351308"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.389"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="3dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="412dp"
                android:layout_height="38dp"
                android:background="#4251f5"
                android:text="      Places"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="-3dp"
                tools:layout_editor_absoluteY="56dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="241dp"
                android:layout_height="33dp"
                android:text="      Ravana Falls"
                android:textColor="#071251"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="112dp" />

            <ImageView
                android:id="@+id/imageView28"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                app:srcCompat="@drawable/rawanafallsimg" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

            <TextView
                android:id="@+id/textView4"
                android:layout_width="399dp"
                android:layout_height="85dp"
                android:text="Ravana Falls is a popular sightseeing attraction in Sri Lanka. It currently ranks as one of the widest falls in the country"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="367dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ravanafallslinktomap"
                android:textColor="#2196F3"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="321dp"
                android:layout_height="33dp"
                android:text="      The Nine Arch Bridge"
                android:textColor="#071251"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="112dp" />

            <ImageView
                android:id="@+id/imageView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ninearches" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

            <TextView
                android:id="@+id/textView6"
                android:layout_width="394dp"
                android:layout_height="292dp"
                android:text="The Nine Arch Bridge also called the Bridge in the Sky, is a viaduct bridge in Sri Lanka. It is one of the best examples of colonial-era railway construction in the country. The construction of the bridge is generally attributed to a local Ceylonese builder, P. K. Appuhami, in consultation with British engineers. The chief designer and project manager of the 'upcountry railway line of Ceylon' project was D. J. Wimalasurendra, a distinguished Ceylonese engineer and inventor.
         The designer of the viaduct was Harold Cuthbert Marwood of Railway Construction Department of Ceylon Government Railway. The 1923 report titled Construction of a Concrete Railway Viaduct in Ceylon published by the Engineering Association of Ceylon has details of all the records including the plans and drawings. It is located in Demodara, between Ella and Demodara railway stations. The surrounding area has seen a steady increase of tourism due to the bridge's architectural ingenuity and the profuse greenery in the nearby hillsides"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="367dp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ninearchlinktomap"
                android:textColor="#2196F3"
                android:textSize="18sp" />



            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:background="#604098"
                android:text="      Hotels"
                android:textColor="#071251"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="112dp" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Oak Ray Ella Gap Hotel"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView42"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/oakrayellagaphotel" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="18dp"
                android:gravity="center"
                android:textColor="@android:color/holo_blue_light"
                android:text="@string/oakraylinktomap"
                android:id="@+id/textView13"
                />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Living Heritage"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView43"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/livingheritage" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="18dp"
                android:gravity="center"
                android:textColor="@android:color/holo_blue_light"
                android:text="@string/livinglinktomap"
                android:id="@+id/textView14"
                />


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>